--- a/MusicRecommender.ipynb
+++ b/MusicRecommender.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Necessary package imports"
+    "Make necessary package imports"
    ]
   },
   {
